# RadioBot

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  demo-reset.sh  demo-whiptail.tape  docker-compose.yml  docker-entrypoint.sh  doublesign.bat  doublesigncopy.bat  gen_distro  ircbot.text  move_and_sign.bat  output_to_all_versions.props  setup-plain.sh  setup-tui.sh
Client3/: CMakeLists.txt  Client3.vcxproj  Client3.vcxproj.filters  about.cpp  builtin_xml.cpp  client.h  client.pem  client.wdr  client3.rc  client_wdr.cpp  client_wdr.h  client_wdr.xrc  config.cpp  connmgr.cpp  crypt.h  libdebug.cpp  libdebug.h  main.cpp  options.cpp  resource.h  resource2.h
Common/DSL/: CMakeLists.txt
mp3sync/: CMakeLists.txt  id3copy.cpp  main.cpp  mp3sync.h  mp3sync.vcxproj  mp3sync.vcxproj.filters  transcode.cpp
v5/: CMakeLists.txt  gen_distro  output_props5.props
v5/IRCBot5/: IRCBot5.vcxproj  IRCBot5.vcxproj.filters
v5/IRCBot5_Shell/: IRCBot5_Shell.vcxproj  ircbot5_shell.rc  resource.h  shell.cpp  shell.h  tray.cpp
v5/IRCBot5_Standalone/: CMakeLists.txt  IRCBot5_Standalone.vcxproj  IRCBot5_Standalone.vcxproj.filters
v5/Output/: update-lang.bat
v5/Output/Licenses/: Mersenne Twister.txt  WELL1024.txt  libcurl.txt  libzip.txt  openssl.txt  physicsfs.txt  qstat.txt  resample.txt  soxr-2.txt
v5/Plugins/: CMakeLists.txt  adj_plugin_props.props  plugin_generic.txt  plugin_post_common.txt  plugin_props.props  sdj_plugin_props.props
v5/Plugins/AutoDJ/: AutoDJ.vcxproj  AutoDJ.vcxproj.filters  CMakeLists.txt  adj_plugin.h  autodj.cpp  autodj.h  autodj.rc  build.h  build.ini  deck.cpp  dsp.h  file_utils.cpp  mixer.cpp  playback.cpp  plugins.cpp  promos.cpp  read_file.cpp  read_file.h  read_stream.cpp  read_stream.h  req_iface.cpp  resampler.cpp  resource.h  scheduler.cpp  scheduler.h  ss_icecast.cpp  ss_icecast.h  ss_shoutcast.cpp  ss_shoutcast.h  ss_steamcast.cpp  ss_steamcast.h  ss_streamerp2p.cpp  ss_streamerp2p.h  ss_ultravox.cpp  ss_ultravox.h  state.cpp  tcl_commands.h  tcl_commands.i  timing.cpp  title_updates.cpp  (+2 more)
v5/Plugins/Auto_Identify/: Auto_Identify.vcxproj  Auto_Identify.vcxproj.filters  CMakeLists.txt  auto_identify.cpp
v5/Plugins/Centovacast/: CMakeLists.txt  Centovacast.cpp  Centovacast.vcxproj  Centovacast.vcxproj.filters
v5/Plugins/ChanAdmin/: CMakeLists.txt  ChanAdmin.cpp  ChanAdmin.vcxproj  ChanAdmin.vcxproj.filters  automodes.cpp  bans.cpp  chanadmin.h  chanadminapi.h  ignores.cpp  seen.cpp
v5/Plugins/ChannelLinking/: CMakeLists.txt  ChannelLinking.cpp  ChannelLinking.vcxproj  ChannelLinking.vcxproj.filters
v5/Plugins/ChatGPT/: CMakeLists.txt  ChatGPT.vcxproj  ChatGPT.vcxproj.filters  chat.cpp  chatgpt.cpp  chatgpt.h
v5/Plugins/Claude/: CMakeLists.txt  Claude.vcxproj  Claude.vcxproj.filters  chat.cpp  claude.cpp  claude.h
v5/Plugins/DCC/: CMakeLists.txt  DCC.vcxproj  DCC.vcxproj.filters  chat.cpp  dcc.cpp  dcc.h  fserv.cpp  recv.cpp  send.cpp
v5/Plugins/Forum/: CMakeLists.txt  Forum.vcxproj  common_interface.cpp  forum.cpp  forums.h  phpbb.cpp  vbulletin.cpp
v5/Plugins/Gaming/: CMakeLists.txt  Gaming.vcxproj  Gaming.vcxproj.filters  gaming.cpp
v5/Plugins/Hangman/: CMakeLists.txt  Hangman.vcxproj  Hangman.vcxproj.filters  game.cpp  hangman.cpp  hangman.h  wordlist.cpp
v5/Plugins/Jabber/: CMakeLists.txt  Jabber.cpp  Jabber.vcxproj  Jabber.vcxproj.filters  jabber.h
v5/Plugins/LastFM/: CMakeLists.txt  LastFM.vcxproj  LastFM.vcxproj.filters  lastfm.cpp  liblastfm.cpp  liblastfm.h
v5/Plugins/LevelEmul/: CMakeLists.txt  LevelEmul.vcxproj  LevelEmul.vcxproj.filters  levelemul.cpp
v5/Plugins/Logging/: CMakeLists.txt  Logging.vcxproj  Logging.vcxproj.filters  logging.cpp  logging.h  mirc_log.cpp
v5/Plugins/Lua/: CMakeLists.txt  Lua.vcxproj  lua_call.cpp  lua_functions.cpp  lua_plugin.cpp  lua_plugin.h
v5/Plugins/MeshCore/: CMakeLists.txt  MeshCore.vcxproj  MeshCore.vcxproj.filters  meshcore_plugin.cpp  meshcore_plugin.h  meshcore_userdb.cpp
v5/Plugins/Mumble/: CMakeLists.txt  Mumble.cpp  Mumble.vcxproj  Mumble.vcxproj.filters  libmumble.cpp  libmumble.h  mumble_plugin.h  update_proto.bat
v5/Plugins/Notes/: CMakeLists.txt  Notes.vcxproj  Notes.vcxproj.filters  notes.cpp
v5/Plugins/Pidgin/: CMakeLists.txt  Pidgin.vcxproj  Pidgin.vcxproj.filters  imbridge.h  purple_plugin.cpp  purple_plugin.h
v5/Plugins/PublicVote/: CMakeLists.txt  PublicVote.cpp  PublicVote.vcxproj  PublicVote.vcxproj.filters
v5/Plugins/Quotes/: CMakeLists.txt  Quotes.cpp  Quotes.vcxproj  Quotes.vcxproj.filters
v5/Plugins/SAM/: CMakeLists.txt  SAM.vcxproj  SAM.vcxproj.filters  req_iface.cpp  sam.cpp  sam.h
v5/Plugins/SC_Proxy/: CMakeLists.txt  SC_Proxy.cpp  SC_Proxy.vcxproj  SC_Proxy.vcxproj.filters
v5/Plugins/SMS/: CMakeLists.txt  SMS.vcxproj  SMS.vcxproj.filters  pop.cpp  send.cpp  sms.cpp  sms.h  sms_interface.h
v5/Plugins/SS_Admin/: CMakeLists.txt  SS_Admin.vcxproj  SS_Admin.vcxproj.filters  ss_admin.cpp
v5/Plugins/ShowSchedule/: CMakeLists.txt  ShowSchedule.vcxproj  db_mysql.cpp  db_sqlite.cpp  show_schedule.cpp  show_schedule.h
v5/Plugins/SimpleDJ/: CMakeLists.txt  SimpleDJ.vcxproj  SimpleDJ.vcxproj.filters  adj_plugin.h  autodj.h  build.h  build.ini  mixer.cpp  plugin_post_common.txt  plugins.cpp  read_file.cpp  read_file.h  read_mms.cpp  read_mms.h  read_stream.cpp  read_stream.h  req_iface.cpp  resource.h  scheduler.cpp  scheduler.h  simpledj.cpp  simpledj.rc  ss_icecast.cpp  ss_icecast.h  ss_shoutcast.cpp  ss_shoutcast.h  ss_streamerp2p.cpp  ss_streamerp2p.h  ss_ultravox.cpp  ss_ultravox.h  timing.cpp  (+2 more)
v5/src/: CMakeLists.txt  SendQ.cpp  SendQ.h  botapi.cpp  botapi.h  build.h  build.ini  builtin_commands.cpp  builtin_xml.cpp  command_aliases.cpp  command_aliases.h  commands.cpp  commands.h  commands_priv.h  common_messages.h  config.cpp  config_defaults.cpp  config_online_backup.cpp  db.cpp  db.h  ial.cpp  ial.h  idle.cpp  idle.h  irc.cpp  irc.h  ircbot.h  ircbot4.rc  ircbot_private.h  language.cpp  language.h  log.cpp  main.cpp  make_cert.cpp  message_ipc.cpp  plugins.cpp  plugins.h  plugins_private.h  ratings.cpp  ratings.h  (+22 more)
(+376 files in other folders)
