
IF (NOT EXISTS ${DSL_DIRECTORY})
	execute_process(COMMAND git clone https://github.com/DriftSolutions/DSL.git "${DSL_DIRECTORY}")
ENDIF()
IF (NOT EXISTS ${DSL_DIRECTORY})
        message(FATAL_ERROR "Could not clone the DSL repository!")
ENDIF()

AUX_SOURCE_DIRECTORY(${DSL_DIRECTORY}/src SRCFILES)
AUX_SOURCE_DIRECTORY(${DSL_DIRECTORY}/src/algo ALGOFILES)
AUX_SOURCE_DIRECTORY(${DSL_DIRECTORY}/src/openssl OPENSSLFILES)
AUX_SOURCE_DIRECTORY(${DSL_DIRECTORY}/src/mysql MYSQLFILES)

IF(DSL_SHARED EQUAL 1)
message(STATUS "DSL Mode: Shared")
add_library (ibdsl SHARED ${SRCFILES} ${ALGOFILES} ${OPENSSLFILES} ${MYSQLFILES}) 
SET_TARGET_PROPERTIES(ibdsl PROPERTIES LIBRARY_OUTPUT_DIRECTORY ../../v5/Output)
TARGET_LINK_LIBRARIES(ibdsl ${LIBS})
ELSE(DSL_SHARED EQUAL 1)
message(STATUS "DSL Mode: Static")
add_library (ibdsl STATIC ${SRCFILES} ${ALGOFILES} ${OPENSSLFILES} ${MYSQLFILES}) 
SET_TARGET_PROPERTIES(ibdsl PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ../../obj)
ENDIF(DSL_SHARED EQUAL 1)
