
add_subdirectory (AutoDJ)
add_subdirectory (Centovacast)
add_subdirectory (LastFM)
add_subdirectory (PublicVote)
add_subdirectory (SAM)
add_subdirectory (SC_Proxy)
add_subdirectory (SimpleDJ)
add_subdirectory (SS_Admin)
add_subdirectory (TuneIN)
add_subdirectory (Auto_Identify)
add_subdirectory (ChanAdmin)
add_subdirectory (ChannelLinking)
add_subdirectory (DCC)
add_subdirectory (Forum)
add_subdirectory (Gaming)
add_subdirectory (Hangman)
add_subdirectory (identd)
add_subdirectory (Jabber)
add_subdirectory (LevelEmul)
add_subdirectory (Logging)
add_subdirectory (Lua)
add_subdirectory (Mumble)
add_subdirectory (Notes)
add_subdirectory (Pidgin)
add_subdirectory (ShowSchedule)
add_subdirectory (Skype)
add_subdirectory (SMS)
add_subdirectory (TeamSpeak3)
add_subdirectory (Telnet)
add_subdirectory (Trivia)
add_subdirectory (TTS_Services)
add_subdirectory (Twitter)
add_subdirectory (Uno)
add_subdirectory (Users_MySQL)
add_subdirectory (Users_Shared)
add_subdirectory (Welcome)
