SET(THISPLUG MeshCore)

pkg_search_module(LIBMOSQ OPTIONAL libmosquitto)
IF(DEFINED LIBMOSQ_FOUND)
        message(STATUS "Found libmosquitto package, MeshCore plugin enabled...")
        include_directories(${LIBMOSQ_INCLUDE_DIRS})
        link_directories(${LIBMOSQ_LIBRARY_DIRS})

	pkg_search_module(LIBUNIVALUE REQUIRED libunivalue univalue)
	include_directories(${LIBUNIVALUE_INCLUDE_DIRS})
	link_directories(${LIBUNIVALUE_LIBRARY_DIRS})

	SET(MESHCORE_MQTT_DIRECTORY ${PROJECT_SOURCE_DIR}/v5/Plugins/MeshCore/driftmeshcore)
	IF (NOT EXISTS ${MESHCORE_MQTT_DIRECTORY})
		message(STATUS "Cloning Drift Solutions MeshCore repository into ${MESHCORE_MQTT_DIRECTORY} ...")
		execute_process(COMMAND git clone https://github.com/DriftSolutions/meshcore "${MESHCORE_MQTT_DIRECTORY}")
	ENDIF()
	IF (NOT EXISTS ${MESHCORE_MQTT_DIRECTORY})
	        message(FATAL_ERROR "Could not clone the Drift Solutions MeshCore repository!")
	ENDIF()

	AUX_SOURCE_DIRECTORY(${MESHCORE_MQTT_DIRECTORY}/libmeshcoremqttclient MESHCOREFILES)
	AUX_SOURCE_DIRECTORY(. SRCFILES)
	add_library (${THISPLUG} MODULE ${SRCFILES} ${MESHCOREFILES})
	SET(PLUGLIBS ${LIBMOSQ_LIBRARIES} ${LIBUNIVALUE_LIBRARIES})
	include(../plugin_post_common.txt)

ELSE(DEFINED LIBMOSQ_FOUND)
        message(STATUS "Could not find libmosquitto, skipping MeshCore plugin...")
ENDIF(DEFINED LIBMOSQ_FOUND)
