SET(THISPLUG Skype)

pkg_search_module(DBUS REQUIRED dbus-1 dbus-glib-1 dbus-glib)
execute_process(COMMAND ./dbustest OUTPUT_VARIABLE DBUS_OLD)
IF(DBUS_OLD EQUAL 0)
	message(STATUS "Old D-BUS detected, disabling Skype D-BUS support...")
	SET(DBUS_FOUND 0)
ELSE(DBUS_OLD EQUAL 0)
	message(STATUS "Modern D-BUS detected, enabling Skype D-BUS support...")
ENDIF(DBUS_OLD EQUAL 0)

pkg_search_module(GLIB2 REQUIRED glib-2.0)
pkg_search_module(GTHREAD2 REQUIRED gthread-2.0)
pkg_search_module(X11 OPTIONAL x11)
IF(NOT X11_FOUND)
	message(STATUS "Could not find x11 automatically, trying manually...")
	include_directories(/usr/X11/include)
	link_directories(/usr/X11/lib)
	check_library_exists(X11 XOpenDisplay "" HAVE_X11)
	IF(HAVE_X11)
		SET(X11_LIBRARIES X11)
	ELSE(HAVE_X11)
        	message(STATUS "Could not find libX11!")
		add_definitions(-DNO_X11)
	ENDIF(HAVE_X11)
ENDIF(NOT X11_FOUND)

IF(NOT DBUS_FOUND)
add_definitions(-DNO_DBUS)
ENDIF(NOT DBUS_FOUND)

AUX_SOURCE_DIRECTORY(. SRCFILES)
AUX_SOURCE_DIRECTORY(../../../Common/libSkypeAPI LSKYPEAPI)
include_directories(${GLIB2_INCLUDE_DIRS} ${GTHREAD2_INCLUDE_DIRS} ${X11_INCLUDE_DIRS} ${DBUS_INCLUDE_DIRS})
link_directories(${GLIB2_LIBRARY_DIRS} ${GTHREAD2_LIBRARY_DIRS} ${X11_LIBRARY_DIRS} ${DBUS_LIBRARY_DIRS})
add_library (${THISPLUG} MODULE ${SRCFILES} ${LSKYPEAPI}) 

pkg_search_module(MPG123 REQUIRED libmpg123)
include_directories(${MPG123_INCLUDE_DIRS})

SET(PLUGLIBS ${GLIB2_LIBRARIES} ${GTHREAD2_LIBRARIES} ${X11_LIBRARIES} ${DBUS_LIBRARIES} ${MPG123_LIBRARIES})
INCLUDE(../plugin_post_common.txt)
